playerstats: implemented separate top cache  which is patched dynamically to avoid loosing values when player's quit